--- a/css/index.css
+++ b/css/index.css
@@ -69,3 +69,66 @@ footer{
 footer span{
     color: var(--lighter-blue);
 }
+
+.overlay{
+    border: 1px solid white;
+    border-radius: 20px;
+    background: var(--blue-gradient);
+    box-shadow: var(--shadow);
+    padding: 2rem;
+    width: fit-content;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    align-content: center;
+    align-self: center;
+
+    justify-content: center;
+    justify-items: center;
+}
+.overlay input[type=text]{
+    border: none;
+    border-radius: 20px;
+    width: 100%;
+    height: 2rem;
+    padding-left: 1rem;
+
+}
+.overlay div{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+.overlay div .accept-button{
+    border: none;
+    border-radius: 20px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    color: var(--blue);
+    background: white;
+
+    padding-left: 2rem;
+    padding-right: 2rem;
+
+    text-align: center;
+    text-decoration: none;
+    font-size: large;
+    font-weight: bolder;
+}
+.overlay div .decline-button{
+    border: none;
+    border-radius: 20px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    color: var(--lighter-blue);
+    background: white;
+
+    padding: .5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+
+    text-align: center;
+    text-decoration: none;
+    font-size: large;
+    font-weight: bolder;
+}
