--- a/css/loadingcs.css
+++ b/css/loadingcs.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: 'arial', sans-serif; /* ganti jadi wanted sans */
+    font-family: Wanted;
     background: #f0f0f0;
 }
 
