--- a/css/beranda.css
+++ b/css/beranda.css
@@ -1,20 +1,20 @@
-
-
 .welcome-message{
-    padding-left: 4rem;
-
     font-size: 2rem;
     /* font-weight: bold; */
     color: white;
+    font-family: Wanted;
 }
 .welcome-message p{
     margin-top: 1rem;
+    padding-left: 5%;
 }
 .welcome-message .small{
     font-size: 1rem;
+    font-family: Wanted;
 }
 .welcome-message .big{
     font-weight: bold;
+    font-family: Wanted;
 }
 
 /* bagian Cek Saldo */
@@ -31,6 +31,8 @@
     color: white;
     justify-self: center;
     align-self: center;
+    font-family: Wanted;
+    max-width: 500px;
 }
 .cek-saldo::before{
     content: '';
@@ -39,10 +41,8 @@
     background: var(--light-blue);
     width: 100%;
     height: 100%;
-
+    box-shadow: 0px 0px 50px rgba(256, 256, 256, 0.3);
     position: absolute;
-    left: -10px;
-    top: -10px;
     z-index: -999;
 }
 
@@ -63,12 +63,12 @@
 }
 .cek-saldo .top div h3{
     margin: 0;
-
+    font-family: Wanted;
     font-weight: normal;
 }
 .cek-saldo .top div h4{
     margin: 0;
-
+    font-family: Wanted;
     font-weight: normal;
 }
 
@@ -97,6 +97,7 @@
 
 .cek-saldo .lihat-transaksi hr{
     color: var(--blue);
+    font-family: Wanted;
 }
 .cek-saldo .lihat-transaksi div{
     position: relative;
@@ -108,7 +109,7 @@
     padding-left: 1rem;
     padding-bottom: 1rem;
     margin: 0;
-
+    font-family: Wanted;
     color: var(--blue);
 }
 .cek-saldo .lihat-transaksi div img{
@@ -127,7 +128,7 @@
     width: 90%;
     overflow-y: hidden;
     position: relative;
-
+    max-width: 600px;
     justify-self: center;
 }
 .quick-access::before{
@@ -144,9 +145,6 @@
 
     align-self: center;
 }
-.quick-access span{
-    
-}
 .quick-access div{
     padding-top: 1rem;
 
@@ -154,7 +152,7 @@
     justify-self: center;
     display: grid;
     grid-template-columns: repeat(4, max-content);
-    width: 80%;
+    width: 95%;
     gap: 1rem;
 }
 .quick-access div h3{
@@ -162,7 +160,7 @@
     margin: 0;
     width: fit-content;
     justify-self: center;
-        
+    font-family: Wanted;
     color: var(--blue);
     font-size: larger;
     font-weight: bolder;
@@ -178,10 +176,12 @@
     margin: 0;
     padding: 0;
     width: 80%;
+    max-width: 500px;
     display: flex;
     gap: 1.5rem;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    font-family: Wanted;
     
 }
 .quick-access-buttons .add-new{
