--- a/css/index.css
+++ b/css/index.css
@@ -15,11 +15,16 @@ body{
 
 .login-buttons{
     /* border: 1px solid; */
-
     display: flex;
     flex-direction: column;    
     align-items: center;
+    width: 100%;
+    justify-items: center;
     gap: 1rem;
+}
+
+.login-buttons a {
+    max-width: 600px;
 }
 
 .bottom-buttons{
@@ -30,10 +35,9 @@ body{
     width: 80%;
     padding-top: .5rem;
     padding-bottom: .5rem;
-
+    max-width: 600px;
     position: absolute;
     bottom: 20%;
-
     display: flex;
     flex-direction: row;
     justify-content: center;
