--- a/css/pembyarantagihan.css
+++ b/css/pembyarantagihan.css
@@ -1,25 +1,32 @@
 .form{
     /* border: 1px solid; */
     padding: 2rem;
-
+    padding-top: 4rem;
     position: relative;
 
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    font-family: Wanted;
+    width: 70%;
+    max-width: 600px;
+    justify-self: center;
 }
 .form label{
     color: var(--dark-blue);
     font-size: larger;
+    font-family: Wanted;
 }
 .form input[type=text]{
     border: none;
     border-bottom: 1px solid;
     color: var(--gray);
+    font-family: Wanted;
 }
 .form select{
     border: none;
     border-bottom: 1px solid var(--gray);
+    font-family: Wanted;
 }
 .form input[type=button]{
     border: none;
@@ -35,4 +42,5 @@
     position: absolute;
     right: 10%;
     bottom: -50px;
+    font-family: Wanted;
 }
