--- a/css/transaksi.css
+++ b/css/transaksi.css
@@ -8,16 +8,9 @@ body{
     display: flex;
     flex-direction: column;
 }
-.list .item{
-    background: white;
-    
-    position: relative;
 
-    text-decoration: none;
-    color: var(--blue);
-}
 .list .item h2{
-    padding-left: 4rem;
+    padding-left: calc(15% - 10px);
     margin-bottom: 0px;
 }
 .list .item img{
@@ -29,12 +22,48 @@ body{
     width: 80%;
 }
 
-.content-list{
-    /* border: 1px solid; */
 
+.item-header {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 15%;
+}
+
+.item-header img {
+    width: 16px;
+    height: 16px;
+}
+
+.list .item h2 {
+    padding-left: calc(15% - 10px);
+    margin-bottom: 0px;
+}
+
+.content-list {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-
-    align-items: center;
+    gap: 0.8rem;
+    margin-top: 1rem;
+    padding-left: 10rem;
+    padding-right: 1rem;
 }
+
+.list .item {
+    background: white;
+    color: var(--blue);
+    padding: 1rem;
+    font-family: Wanted;
+    border-radius: 10px;
+}
+
+.blue-button {
+    text-decoration: none;
+    color: white;
+    background-color: var(--blue);
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    text-align: center;
+}
+
