--- a/css/transfer.css
+++ b/css/transfer.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: 'arial', sans-serif; /* ganti jadi wanted sans */
+    font-family: Wanted;
     background: #f0f0f0;
 }
 
@@ -27,8 +27,10 @@ body {
 } */
 
 .container {
-    background: #f7f7f7;
     padding: 20px;
+    width: 70%;
+    max-width: 600px;
+    justify-self: center;
 }
 
 h2 {
@@ -36,6 +38,7 @@ h2 {
     color: var(--dark-blue);
     margin-top: 35px;
     margin-bottom: 8px;
+    font-family: Wanted;
 }
 
 .input-select select {
@@ -47,6 +50,7 @@ h2 {
     background: transparent;
     outline: none;
     appearance: none;
+    font-family: Wanted;
 }
 
 .dropdown{
@@ -54,13 +58,14 @@ h2 {
 }
 
 .input-field {
-    width: 92%;
+    width: calc(100% - 24px);
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: 10px;
     font-size: 14px;
     background: white;
     outline: none;
+    font-family: Wanted;
 }
 
 .nominal-input {
@@ -83,6 +88,7 @@ h2 {
     border-radius: 10px;
     padding: 12px;
     font-size: 14px;
+    font-family: Wanted;
 }
 
 .transfer-button {
@@ -96,5 +102,77 @@ h2 {
     border-radius: 10px;
     font-size: 16px;
     cursor: pointer;
+    font-family: Wanted;
 }
 
+
+
+
+/* The Modal (background) */
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  border: 1px solid #888;
+  border-radius: 20px;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+.head-popup{
+    background-color: var(--dark-blue);
+    height: 51px;
+    border-radius: 10px 10px 0 0;
+    padding: 10px;
+}
+.head-popup p{
+    color: #f0f0f0;
+    margin-left: 10px;
+}
+.transfer-details{
+    margin-left: 30px;
+    margin-top: 20px;
+}
+
+.transfer-name{
+    color: var(--dark-blue);
+    font-size: 16px;
+    margin: 0;
+}
+.transfer-amount{
+    margin: 0;
+    color: var(--dark-blue);
+    font-size: 34px;
+}
+.transfer-time{
+    margin-top: 30px;
+    color: var(--dark-blue);
+    font-size: 13px;
+}
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
